--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Hello world</h1>
+<!doctype html>
+<html>
+<head>
+	<title>Azik Samarkandiy</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+	<h1>Hello World</h1>>
+</body>
+</html>
