--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 	<title>Azik Samarkandiy</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
+	</head>
 <body>
-	<h1>Hello World</h1>>
+	<iframe src="http://azik.me" width="100%" height="100%" frameborder="0"></iframe>>
 </body>
 </html>
