--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html>
 <head>
 	<title>Azik Samarkandiy</title>
-	</head>
+	<style>
+	iframe{
+		width: 100%;
+		height: 100%;
+		border: 0;
+		margin: 0;
+		padding: 0;
+	}
+	</style>
+</head>
 <body>
-	<iframe src="http://azik.me" width="100%" height="100%" frameborder="0"></iframe>>
+	<iframe src="http://azik.me" frameborder="0"></iframe>>
 </body>
 </html>
