--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Azik Samarkandiy</title>
 	<style>
-	iframe{
+	#iframe{
 		width: 100%;
 		height: 100%;
 		border: 0;
@@ -13,6 +13,6 @@
 	</style>
 </head>
 <body>
-	<iframe src="http://azik.me" frameborder="0"></iframe>>
+	<iframe id="iframe" src="http://azik.me"></iframe>
 </body>
 </html>
