--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 <head>
 	<title>Azik Samarkandiy</title>
 	<style>
-	#iframe{
+	body{
+		background: #333;
+	}
+	iframe{
+		background: cover;
 		width: 100%;
-		height: 100%;
+		height: 1024px;
 		border: 0;
 		margin: 0;
 		padding: 0;
+		overflow: hidden;
 	}
 	</style>
 </head>
 <body>
-	<iframe id="iframe" src="http://azik.me"></iframe>
+	<iframe src="http://codepen.io/html5web"></iframe>
 </body>
 </html>
