--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Azik Samarkandiy</title>
+	<title>Azik Samarkandiy - Experiments</title>
 	<style>
 	body{
 		background: #333;
